flux-modules/monitoring/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-gw
      namespace: kube-system
  hostnames:
    - "sys.YOUR_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
